--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
         "moment": "^2.24.0",
-        "winston": "^3.2.1"
+        "winston": "^3.2.1",
+        "ws": ">=3.3.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.4.4",
