--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "src/bot.js",
     "author": "parp",
     "scripts": {
-        "build": "babel src -d lib --copy-files",
-        "start": "npm run build && pm2 start ./lib/bot.js",
+        "build": "babel src -d lib",
+        "start": "npm run build && pm2 start ./lib/bot.js --",
         "test": "NODE_ENV=test mocha '/**/*.spec.js'"
     },
     "dependencies": {
