--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/bot.js",
     "author": "parp",
     "scripts": {
-        "build": "babel src -d lib",
+        "build": "babel src -d lib --extensions \".ts\"",
         "start": "npm run build && pm2 start ./lib/bot.js --",
         "test": "NODE_ENV=test mocha '/**/*.spec.js'"
     },
@@ -20,6 +20,7 @@
         "@babel/core": "^7.4.5",
         "@babel/node": "^7.4.5",
         "@babel/preset-env": "^7.4.5",
+        "@babel/preset-typescript": "^7.3.3",
         "chai": "^4.2.0",
         "sinon": "^7.3.2"
     }
