--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@babel/node": "^7.4.5",
         "@babel/preset-env": "^7.4.5",
         "@babel/preset-typescript": "^7.3.3",
+        "@types/node": "^12.0.8",
         "chai": "^4.2.0",
         "sinon": "^7.3.2"
     }
