move from discord.io to discord.js

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test": "NODE_ENV=test mocha '/**/*.spec.js'"
     },
     "dependencies": {
-        "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
+        "discord.js": "^11.5.1",
         "moment": "^2.24.0",
         "ws": ">=3.3.1"
     },
