--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-    "name": "parpbot",
-    "version": "0.1.0",
-    "description": "Does parp things.  What are parp things?  Why, the things that this bot does.",
-    "main": "src/bot.js",
-    "author": "parp",
-    "scripts": {
-        "build": "babel src -d lib --extensions \".ts\"",
-        "start": "npm run build && pm2 start ./lib/bot.js --",
-        "test": "NODE_ENV=test mocha '/**/*.spec.js'"
-    },
-    "dependencies": {
-        "discord.js": "^11.5.1",
-        "moment": "^2.24.0",
-        "ws": ">=3.3.1"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.4.4",
-        "@babel/core": "^7.4.5",
-        "@babel/node": "^7.4.5",
-        "@babel/preset-env": "^7.4.5",
-        "@babel/preset-typescript": "^7.3.3",
-        "@types/node": "^12.0.8",
-        "chai": "^4.2.0",
-        "sinon": "^7.3.2"
-    }
+  "name": "parpbot",
+  "version": "0.1.0",
+  "description": "Does parp things.  What are parp things?  Why, the things that this bot does.",
+  "main": "src/bot.js",
+  "author": "parp",
+  "scripts": {
+    "build": "babel src -d lib --extensions \".ts\"",
+    "start": "npm run build && pm2 start ./lib/bot.js --",
+    "test": "jest"
+  },
+  "dependencies": {
+    "discord.js": "^11.5.1",
+    "moment": "^2.24.0",
+    "ws": ">=3.3.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.6.0",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.0.8",
+    "babel-jest": "^24.9.0",
+    "chai": "^4.2.0",
+    "jest": "^24.9.0",
+    "sinon": "^7.3.2",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.6.4"
+  }
 }
